# crew-ai-demo-1

./: .gitignore  README.md  pyproject.toml
latest_ai_development/: .gitignore  pyproject.toml  report.md
latest_ai_development/src/latest_ai_development/: crew.py  main.py
latest_ai_development/src/latest_ai_development/config/: agents.yaml
src/crew_ai_demo_1/: __init__.py
