[project]
name = "crew-ai-demo-1"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sriram Peddapanta", email = "SriramPeddapanta@users.noreply.github.com" }
]
dependencies = [
    "jupyter>=1.1.1",
    "crewai[tools]>=0.100.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crew_ai_demo_1"]
